--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8085
 
 #Producer properties
-spring.kafka.producer.bootstrap-servers=127.0.0.1:29092
+spring.kafka.producer.bootstrap-servers=kafka:29092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.properties.spring.json.type.mapping=drone:com.gmail.caioa.morais.scjDroneApp.entity.Drone
@@ -14,7 +14,7 @@ auto.create.topics.enable=true
 
 # jpa
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/db
+spring.datasource.url=jdbc:mysql://drone-app-mysql:3306/mysql
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
