--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Web Config
-server.port=8085
+server.port=8060
 
 #Producer properties
 spring.kafka.producer.bootstrap-servers=kafka:29092
@@ -13,7 +13,7 @@ topic.name.producer=43scj.drone.topic
 auto.create.topics.enable=true
 
 # jpa
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://drone-app-mysql:3306/mysql
 spring.datasource.username=root
 spring.datasource.password=password
